components/fl-orchestrator/kustomize/envoyproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fl-orchestrator-envoyproxy
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    spire-workload: fl-orchestrator
