components/fl-orchestrator/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fl-orchestrator
spec:
  selector:
    app: fl-orchestrator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
